# arxiv_fetcher

./: .gitignore  DATASET.md  README.md  README_EN.md  pyproject.toml  requirements.txt
config/: default.yaml
scripts/: run_api.py  run_builder.py
shell/: arxiv_service.sh
src/api/: app.py  routes.py
src/config/: config_loader.py
src/core/: builder.py  fetcher.py  searcher.py
src/database/: chromadb_manager.py
src/storage/: __init__.py  csv_manager.py
